style: add top margin to mobile section headers to prevent top overflow clipping

--- a/docs/index.css
+++ b/docs/index.css
@@ -946,6 +946,10 @@ a {
   }
   
   /* Section Header on Mobile */
+  .header-with-accents {
+    margin-top: 20px;
+  }
+  
   .section-title {
     font-size: 2.2rem;
   }
